# openfoodfacts

./: CMakeLists.txt  Main.qml  OpenFoodFacts.apparmor  OpenFoodFacts.desktop.in.in  OpenFoodFacts.pro  QFacts.pro  README.md  manifest.json.in  old_manifest~
OpenFoodFacts/: OpenFoodFacts.desktop.desktop
OpenFoodFacts/tests/autopilot/QFacts/tests/: test_main.py
QFacts/: Main.qml  QFacts.desktop  QFacts.pro
QFacts/tests/autopilot/: run
QFacts/tests/autopilot/QFacts/tests/: __init__.py
app/: CMakeLists.txt  CMakeLists.txt~  OpenFoodFacts.desktop.in  app.pro  historymodel.cpp  historymodel.h  main.cpp  qml.qrc  qrcodegenerator.cpp  qrcodereader.cpp  qrcodereader.h
app/qml/: Main.qml  ProductView.qml  Settings.qml  barcodeReader.qml  main.qml  tagger.qml
app/tests/autopilot/: run
app/tests/autopilot/openfoodfacts/tests/: __init__.py  test_main.py
backend/: CMakeLists.txt
backend/QFacts/: QFacts.pro  backend.cpp  backend.h  qmldir
backend/modules/OpenFoodFacts/: backend.cpp  backend.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: CMakeLists.txt  openfoodfacts.ubuntouch.pot  template.pot
qml/: TakePicture.qml
